--- a/prntmrui.rc
+++ b/prntmrui.rc
@@ -106,7 +106,7 @@ BEGIN
     LTEXT           "",IDC_PAPERSIZE,207,40,65,15
 END
 
-IDD_SAVEDIALOG DIALOG DISCARDABLE  0, 0, 190, 122
+IDD_SAVEDIALOG DIALOG DISCARDABLE  0, 0, 190, 144
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "PrintMirror - Metafile Extractor"
 FONT 8, "MS Sans Serif"
@@ -115,8 +115,9 @@ BEGIN
     PUSHBUTTON      "Next",IDNEXT,129,54,50,14
     PUSHBUTTON      "Previous",IDPREV,129,32,50,14
     LTEXT           "",IDC_SAVEAS,13,46,102,28
-    PUSHBUTTON      "License",IDLICENSE,129,98,50,14
     PUSHBUTTON      "Preview",IDPREVIEW,129,75,50,14
+    PUSHBUTTON      "Print",IDPRINT,129,98,50,14
+    PUSHBUTTON      "License",IDLICENSE,129,120,50,14
 END
 
 IDD_LICENSEDIALOG DIALOG DISCARDABLE  0, 0, 186, 97
@@ -124,7 +125,8 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "License"
 FONT 8, "MS Sans Serif"
 BEGIN
-    LTEXT           "This is GNU GPL program",IDC_LICENSE,13,46,102,12
+    LTEXT           "This is GNU GPL program Version1.1(Written by V Aravind)",
+    IDC_LICENSE,13,46,102,30
     PUSHBUTTON      "Close",IDC_CLOSE,129,36,50,14
 END
 
