--- a/prntmrui.rc
+++ b/prntmrui.rc
@@ -53,7 +53,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 //
 
 1 VERSIONINFO
- FILEVERSION 0 , 3, 0, 0
+ FILEVERSION 0 , 3, 1, 2
  PRODUCTVERSION 5,1,2600,0
  FILEFLAGSMASK 0x3fL
  /*
@@ -108,7 +108,7 @@ END
 
 IDD_SAVEDIALOG DIALOG DISCARDABLE  0, 0, 190, 144
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "PrintMirror - Metafile Extractor"
+CAPTION "PrintMirror"
 FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "Extract",IDSAVE,129,11,50,14
